--- a/kubernetes/newsletter-server/applications/listmonk/kustomization.yml
+++ b/kubernetes/newsletter-server/applications/listmonk/kustomization.yml
@@ -1,32 +1,2 @@
 resources:
-  - externalsecret.yml
-  - service.yml
-  - statefulset.yml
-  - httproute.yml
-
-configMapGenerator:
-  - name: listmonk
-    envs:
-      - configs.env
-
-images:
-  - name: listmonk/listmonk
-    newTag: v3.0.0
-  - name: postgres
-    newTag: 16-alpine
-
-replacements:
-  - source:
-      kind: StatefulSet
-      name: listmonk
-      fieldPath: spec.template.metadata.labels
-    targets:
-      - select:
-          kind: Service
-          name: listmonk
-        fieldPaths:
-          - spec.selector
-        options:
-          create: true
-
-namespace: default
+  - ../../../../applications/listmonk
