--- a/ansible/newsletter-server/main.yml
+++ b/ansible/newsletter-server/main.yml
@@ -1,4 +1,19 @@
 - name: Newsletter Server
   hosts: hcloud
+  gather_facts: false
+  become: true
   tasks:
-    - ansible.builtin.ping:
+    - name: Update HAProxy config
+      ansible.builtin.copy:
+        src: haproxy.cfg
+        dest: /etc/haproxy/haproxy.cfg
+        owner: haproxy
+        group: haproxy
+        mode: "0644"
+      notify: Reload haproxy
+  handlers:
+    - name: Reload haproxy
+      ansible.builtin.systemd:
+        name: haproxy
+        state: reloaded
+        daemon_reload: true
