fix(CI): treat the tg command as one line string

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,12 +79,12 @@ jobs:
           tofu_version: ${{ env.tofu_version }}
           tg_version: ${{ env.tg_version }}
           tg_dir: ${{ env.working_dir }}
-          tg_command: |
-            run-all \
-              --terragrunt-include-dir newsletter-server \
-              --terragrunt-include-dir cloudflare \
-              --terragrunt-include-dir k8s-oidc-provider \
-              --terragrunt-non-interactive \
+          tg_command: >-
+            run-all
+              --terragrunt-include-dir newsletter-server
+              --terragrunt-include-dir cloudflare
+              --terragrunt-include-dir k8s-oidc-provider
+              --terragrunt-non-interactive
               apply -auto-approve
 
   ansible-playbook:
