fix(CI): save openssh key in SSM

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,7 @@ jobs:
               apply -auto-approve
 
   ansible-playbook:
+    needs: opentofu
     if: |
       (
         github.event_name == 'push' &&
