chore: restrict the server SSH to my IP
there are assholes trying all the times and I will not risk it

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -76,7 +76,8 @@ frontend https
   default_backend default_backend
 
 backend k8s
-  option tcp-check
+  option httpchk GET / HTTP/1.1
+  http-check send hdr Host newsletter.developer-friendly.blog
   server k8s 127.0.0.1:81 check inter 2000 rise 1 fall 3
 
 backend default_backend
