--- a/ansible/roles/monitoring/vars/vars-aarch64.yml
+++ b/ansible/roles/monitoring/vars/vars-aarch64.yml
@@ -1,6 +1,7 @@
 ---
 fail2ban_exporter_url: https://gitlab.com/hectorjsmith/fail2ban-prometheus-exporter/-/releases/v0.10.1/downloads/fail2ban_exporter_0.10.1_linux_arm64.tar.gz
-node_exporter_checksum: e386c7b53bc130eaf5e74da28efc6b444857b77df8070537be52678aefd34d96
-node_exporter_url: https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-arm64.tar.gz
-promtail_url: https://github.com/grafana/loki/releases/download/v2.9.5/promtail-linux-arm64.zip
-vmutils_url: https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/v1.99.0/vmutils-linux-arm64-v1.99.0.tar.gz
+node_exporter_checksum: 627382b9723c642411c33f48861134ebe893e70a63bcc8b3fc0619cd0bfac4be
+node_exporter_url: https://github.com/prometheus/node_exporter/releases/download/v1.8.2/node_exporter-1.8.2.linux-arm64.tar.gz
+promtail_url: https://github.com/grafana/loki/releases/download/v3.0.1/promtail-linux-arm64.zip
+promtail_checksum: 511d3b48c03a7334d13cb0de77dc6a5b87fc8e7b83e3882fad021593d594c8cd
+vmutils_url: https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/v1.103.0/vmutils-linux-arm64-v1.103.0.tar.gz
