--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -3,6 +3,7 @@
   tags:
     - promtail
     - vmagent
+    - fail2ban-exporter
 - name: Install prerequisites
   ansible.builtin.import_tasks: prerequisites.yml
 - name: Install node-exporter
@@ -15,3 +16,8 @@
   ansible.builtin.import_tasks: promtail.yml
   tags:
     - promtail
+- name: Install fail2ban exporter
+  ansible.builtin.import_tasks: fail2ban-exporter.yml
+  when: fail2ban_exporter_enabled
+  tags:
+    - fail2ban-exporter
