--- a/ansible/newsletter-server/main.yml
+++ b/ansible/newsletter-server/main.yml
@@ -1,6 +1,6 @@
 - name: Newsletter Server
   hosts: hcloud
-  gather_facts: false
+  gather_facts: true
   become: true
   vars_files:
     - vars.yml
