--- a/ansible/newsletter-server/vars.yml
+++ b/ansible/newsletter-server/vars.yml
@@ -1,7 +1,7 @@
 prometheus_remote_write:
   url: https://prometheus-prod-24-prod-eu-west-2.grafana.net/api/prom/push
   username: 988203
-  password: "{{ lookup('amazon.aws.ssm_parameter', '/grafana_cloud/remote_write/password', profile='personal', region='ap-southeast-1') }}"
+  password: "{{ lookup('amazon.aws.ssm_parameter', '/grafana_cloud/remote_write/password') }}"
 
 loki_remote_write:
   host: logs-prod-012.grafana.net
