--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ on:
     - cron: "0 14 * * *" # 10:00 eastern time
     - cron: "0 17 * * *" # 10:00 pacific time
 
-
 env:
   tofu_version: 1.8.1
   tg_version: 0.67.0
@@ -136,6 +135,32 @@ jobs:
       - name: Run Ansible playbook
         run: |
           ansible-playbook newsletter-server/main.yml -vvv
+
+  helmwave:
+    runs-on: self-hosted
+    if: |
+      (
+        github.event_name == 'push' &&
+        github.ref == 'refs/heads/main'
+      ) || (
+        github.event_name == 'schedule' &&
+        github.event.schedule == '0 */12 * * *'
+      )
+    environment: prod
+    defaults:
+      run:
+        working-directory: kubernetes/newsletter-server/helm-releases
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: helmwave/setup-action@v0.2.0
+        name: Install helmwave
+        with:
+          version: "0.40.5"
+      - name: Plan
+        run: helmwave build
+      - name: Deploy
+        run: helmwave up
 
   trivy:
     if: contains(fromJson('["push","pull_request","schedule"]'), github.event_name)
