--- a/ansible/roles/monitoring/defaults/main.yml
+++ b/ansible/roles/monitoring/defaults/main.yml
@@ -4,3 +4,5 @@ promtail_source_binary_name: "{{ promtail_url | basename | regex_replace('\\.zip
 fail2ban_exporter_enabled: false
 
 loki_remote_write_password_file: /etc/promtail/loki-password
+
+node_exporter_enabled: true
