chore: cleanup monitoring stack

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,6 +152,8 @@ jobs:
         github.event.schedule == '0 */12 * * *'
       )
     environment: prod
+    env:
+      HELMWAVE_KUBEDOG_ENABLED: "true"
     defaults:
       run:
         working-directory: kubernetes/newsletter-server/helm-releases
