--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -1,3 +1,4 @@
+---
 alertmanager:
   spec:
     externalURL: https://alertmanager.developer-friendly.blog
@@ -7,6 +8,16 @@ defaultRules:
       create: false
     kubernetesSystemControllerManager:
       create: false
+externalVM:
+  write:
+    basicAuth:
+      password:
+        key: password
+        name: grafana-cloud
+      username:
+        key: username
+        name: grafana-cloud
+    url: https://prometheus-prod-24-prod-eu-west-2.grafana.net/api/prom/push
 grafana:
   enabled: false
   forceDeployDatasource: true
@@ -27,6 +38,7 @@ kubeControllerManager:
 kubeScheduler:
   enabled: false
 vmagent:
+  enabled: true
   spec:
     resources:
       limits:
@@ -36,6 +48,7 @@ vmagent:
         cpu: 100m
         memory: 64Mi
 vmalert:
+  enabled: false
   externalLabels:
     environment: production
   extraArgs:
