--- a/kubernetes/newsletter-server/helm-releases/helmwave.yml
+++ b/kubernetes/newsletter-server/helm-releases/helmwave.yml
@@ -26,18 +26,18 @@ releases:
       - ./helm-values/external-secrets.yml
     <<: *options
   - name: grafana-operator
-    namespace: grafana
+    namespace: monitoring
     chart:
       name: oci://ghcr.io/grafana/helm-charts/grafana-operator
       version: v5.12.0
     <<: *options
   - name: victoria-metrics-k8s-stack
-    namespace: victoria-metrics
+    namespace: monitoring
     chart:
       name: victoria-metrics/victoria-metrics-k8s-stack
       version: 0.25.x
     values:
       - ./helm-values/victoria-metrics-k8s-stack.yml
     depends_on:
-      - grafana-operator@grafana
+      - grafana-operator
     <<: *options
