--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -39,6 +39,34 @@ extraObjects:
         creationPolicy: Owner
         deletionPolicy: Delete
         immutable: false
+  - apiVersion: gateway.networking.k8s.io/v1
+    kind: HTTPRoute
+    metadata:
+      name: listmonk
+    spec:
+      hostnames:
+        - alertmanager.developer-friendly.blog
+      parentRefs:
+        - group: gateway.networking.k8s.io
+          kind: Gateway
+          name: global
+          namespace: default
+          sectionName: https
+      rules:
+        - backendRefs:
+            - kind: Service
+              name: vmalertmanager-victoria-metrics-k8s-stack
+              port: 9093
+          filters:
+            - responseHeaderModifier:
+                set:
+                  - name: Strict-Transport-Security
+                    value: max-age=31536000; includeSubDomains; preload
+              type: ResponseHeaderModifier
+          matches:
+            - path:
+                type: PathPrefix
+                value: /
 grafana:
   enabled: false
   forceDeployDatasource: true
@@ -69,7 +97,7 @@ vmagent:
         cpu: 100m
         memory: 64Mi
 vmalert:
-  enabled: false
+  enabled: true
   externalLabels:
     environment: production
   extraArgs:
