--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -42,7 +42,7 @@ extraObjects:
   - apiVersion: gateway.networking.k8s.io/v1
     kind: HTTPRoute
     metadata:
-      name: listmonk
+      name: alertmanager
     spec:
       hostnames:
         - alertmanager.developer-friendly.blog
@@ -97,7 +97,7 @@ vmagent:
         cpu: 100m
         memory: 64Mi
 vmalert:
-  enabled: true
+  enabled: false
   externalLabels:
     environment: production
   extraArgs:
