fix: use http as parent for httproute

--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -51,7 +51,7 @@ extraObjects:
           kind: Gateway
           name: global
           namespace: default
-          sectionName: https
+          sectionName: http
       rules:
         - backendRefs:
             - kind: Service
