feat: deploy echo-server

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -70,8 +70,10 @@ frontend https
   http-request deny deny_status 429 if { sc_http_req_rate(0) gt 60 }
 
   acl newsletter hdr(host) -i newsletter.developer-friendly.blog
-
   use_backend k8s if newsletter
+
+  acl alertmanager hdr(host) -i alertmanager.developer-friendly.blog
+  use_backend k8s if alertmanager
 
   default_backend default_backend
 
