--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -63,6 +63,13 @@ extraObjects:
                   - name: Strict-Transport-Security
                     value: max-age=31536000; includeSubDomains; preload
               type: ResponseHeaderModifier
+            - requestMirror:
+                backendRef:
+                  kind: Service
+                  name: echo-server
+                  namespace: default
+                  port: 80
+              type: RequestMirror
           matches:
             - path:
                 type: PathPrefix
