chore: log http headers

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -61,6 +61,9 @@ frontend http
 frontend https
   bind :443 ssl crt /etc/haproxy/certs/ alpn h2,http/1.1
 
+  log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
+  http-request set-var(txn.req_hdrs) req.hdrs
+
   filter cache hacache
   http-request cache-use hacache
   http-response cache-store hacache
