--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -17,6 +17,7 @@
   ansible.builtin.import_tasks: promtail.yml
   tags:
     - promtail
+  when: promtail_enabled
 - name: Install fail2ban exporter
   ansible.builtin.import_tasks: fail2ban-exporter.yml
   when: fail2ban_exporter_enabled
