--- a/ansible/newsletter-server/main.yml
+++ b/ansible/newsletter-server/main.yml
@@ -15,6 +15,16 @@
       notify: Reload haproxy
       tags:
         - haproxy
+    - name: Copy VMAgent config
+      ansible.builtin.copy:
+        src: vmagent.yml
+        dest: /etc/victoria-metrics/vmagent.yml
+        owner: victoria-metrics
+        group: victoria-metrics
+        mode: "0644"
+      notify: Reload vmagent
+      tags:
+        - vmagent
   roles:
     - name: monitoring
       tags: monitoring
@@ -23,4 +33,9 @@
       ansible.builtin.systemd:
         name: haproxy
         state: reloaded
+        daemon_reload: true
+    - name: Reload vmagent
+      ansible.builtin.systemd:
+        name: vmagent
+        state: restarted
         daemon_reload: true
