--- a/ansible/newsletter-server/main.yml
+++ b/ansible/newsletter-server/main.yml
@@ -24,7 +24,7 @@
         mode: "0644"
       notify: Reload vmagent
       tags:
-        - vmagent
+        - vmagent-config
   roles:
     - name: monitoring
       tags: monitoring
