fix: modify the broken amcfg

--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -128,7 +128,7 @@ extraObjects:
           - active_time_intervals:
               - everyday
             matchers:
-              - severity ~= error|critical
+              - severity =~ error|critical
             receiver: slack
             repeat_interval: 1h
       time_intervals:
