chore: deal with pending release in helmwave

--- a/kubernetes/newsletter-server/helm-releases/helmwave.yml
+++ b/kubernetes/newsletter-server/helm-releases/helmwave.yml
@@ -17,6 +17,7 @@ registries:
   wait: true
   timeout: 5m
   max_history: 10
+  pending_release_strategy: rollback
 
 releases:
   - name: external-secrets
