fix: group alerts by namespace

--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -120,6 +120,8 @@ extraObjects:
       route:
         active_time_intervals:
           - workdays
+        group_by:
+          - namespace
         matchers:
           - severity != none
         receiver: discord
