fix(listmonk-exporter): modify rule interval and use recording rules

--- a/applications/listmonk-exporter/kustomization/vmrule.yml
+++ b/applications/listmonk-exporter/kustomization/vmrule.yml
@@ -5,10 +5,15 @@ metadata:
 spec:
   groups:
     - name: listmonk-exporter
-      interval: 20s
+      interval: 2m
       rules:
+        - expr: changes(listmonk_current_subscribers[1d])
+          record: changes_listmonk_current_subscribers
         - alert: NewSubscriber
-          expr: changes(listmonk_current_subscribers) > 0
+          expr: changes_listmonk_current_subscribers > 0
           for: 0s
           labels:
             severity: info
+          annotations:
+            summary: New subscriber added
+            description: New subscriber with email {{ $labels.email }} added
