fix(helmwave): do not interpret the braces in values file

--- a/kubernetes/newsletter-server/helm-releases/helmwave.yml
+++ b/kubernetes/newsletter-server/helm-releases/helmwave.yml
@@ -50,7 +50,9 @@ releases:
       name: grafana/promtail
       version: 6.16.x
     values:
-      - ./helm-values/promtail.yml
+      - src: ./helm-values/promtail.yml
+        delimiter_left: "[["
+        delimiter_right: "]]"
     depends_on:
       - victoria-metrics-k8s-stack
     <<: *options
